--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ensurance",
+  "name": "ooformsApp",
   "version": "1.0.0",
-  "description": "Free bootstrap 5 Responsive and Business template",
+  "description": "",
   "main": "gulpfile.js",
   "scripts": {
     "start": "gulp",
